# template-regexp-processor

./: .gitignore  README.md  pyproject.toml
template_regexp_processor/: __init__.py  generic.py  tex.py  transf.py
tests/: romaneio_80mm.tex  romeneio_teste.tex  test_template_regexp_processor.py
