[tool.poetry]
name = "template-regexp-processor"
version = "0.1.1"
license = "CC0-1.0"
readme = "README.md"
description = "Customizable RegExp Preprocessor for text Files. Provides a generic engine."
authors = ["mbello <mbello@users.noreply.github.com>"]
repository = "https://github.com/mbello/template-regexp-processor"
homepage = "https://github.com/mbello/template-regexp-processor"
keywords = ['python regexp', 'python template', 'regexp preprocessor']


[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
